[feat] реализация randominputhandler